# ai-rag-practice

./: README.md  hello.py  pyproject.toml
ai-for-everyone/: README.md  hello.py  pyproject.toml
ai-for-everyone/01-langchain-chatgpt/: 01-basic-gemini.ipynb  01-basic.ipynb
